--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="conclusion">체결</string>
     <string name="search">검색</string>
     <string name="cancel">취소</string>
+    <string name="reset">초기화</string>
     <string name="regist">등록</string>
     <string name="yes">예</string>
     <string name="no">아니오</string>
